# CSC713M-CROWN19AB-PROJECT

./: .gitignore  README.md  pyproject.toml
artifacts/features/test/: test_label.csv
etc/: config.py  constants.py  constants_biology.py  constants_labels.py  constants_training.py  training_ml.yaml
notebooks/pipelines/p03.5_eda/: 02_cleaner.ipynb  03_eda.ipynb  0x_datasets_info.ipynb
notebooks/pipelines/p03_preprocessing/: 00_processor.ipynb  01_label_processor.ipynb  02_naive_processor.ipynb  03_motif_processor.ipynb  config.py  constants_biology.py  constants_labels.py  (+1 more)
scripts/: quick_flag_update.py  train_ml.py
scripts/classical/: train_ml.py
scripts/deep_ml/: train_ml.py
src/01_data_explore/: data_exploration.ipynb
src/01_data_preparation/: data_exploration.ipynb  goals.md
src/02_eda/: goals.md
src/03_preprocessing/: 00_processor.ipynb  02_naive_processor.ipynb  05_embedding_processor.ipynb  preprocessed_dataset_progress.md
src/04_model_selection_training/: model_all.ipynb  model_motifs.ipynb  model_naive.ipynb  model_rf_base.py
src/05_error_analysis_model_tuning/: model.ipynb
src/06_model_evaluation/: evaluation_progress.md
src/data_module/: data_module.py
src/features/: feature_factory.py  negative_generator.py  p01_label_preprocessor.py  p02_naive_preprocessor.py  p03_motif_3kmer_preprocessor.py  p04_motif_conjoint_preprocessor.py  p05_biochemical_preprocessor.py
src/models/: classic_ml.py
src/utils/: dataset.py  logging_module.py  metrics.py  name_generator.py  serialize.py  set_seed.py  wandb_setter.py  worker.py
(+33 files in other folders)
